Fix issue with static elements scrolling on mobile. Fix issue with map scroll opening and closing iOS url bar

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,6 +6,7 @@ body {
   background-color: rgba(32,33,36,1) !important;
   margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif;
   min-width: fit-content;
+  position: fixed;
   width: 100vw;
 }
 
